Fixed the broken source download sprites not showing up

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -303,19 +303,17 @@ Full-Width Styles
   text-shadow: #111 0px 0px 10px;
 }
 
-#downloads {
-  position: absolute;
-  width: 210px;
-  z-index: 10;
-  bottom: -40px;
-  right: 0;
-  height: 70px;
+.download-source {
+  position: relative;
+  bottom: 70px;
+  height: 60px;
   background: url('../images/icon_download.png') no-repeat 0% 90%;
 }
 
-.zip_download_link {
+.zip-download-link {
+  position: absolute;
+  left: 30px;
   display: block;
-  float: right;
   width: 90px;
   height:70px;
   text-indent: -5000px;
@@ -323,22 +321,23 @@ Full-Width Styles
   background: url(../images/sprite_download.png) no-repeat bottom left;
 }
 
-.tar_download_link {
+.tar-download-link {
+  position: absolute;
+  left: 120px;
+  bottom: -45px;
   display: block;
-  float: right;
   width: 90px;
   height:70px;
   text-indent: -5000px;
   overflow: hidden;
   background: url(../images/sprite_download.png) no-repeat bottom right;
-  margin-left: 10px;
 }
 
-.zip_download_link:hover {
+.zip-download-link:hover {
   background: url(../images/sprite_download.png) no-repeat top left;
 }
 
-.tar_download_link:hover {
+.tar-download-link:hover {
   background: url(../images/sprite_download.png) no-repeat top right;
 }
 
@@ -356,11 +355,11 @@ Full-Width Styles
   background: #212121;
   position: static;
   bottom: 0px;
-  height: 80px;
+  height: 100px;
 }
 
 article {
-  padding: 40px 0 30px;
+  padding: 0 0 30px;
 }
 
 article h2 {
